add card with book recommendation

--- a/index.html
+++ b/index.html
@@ -69,8 +69,30 @@
       <div class="swiper-scrollbar"></div>
 
     </div>
-  </section>
 
+    <div class="card">
+      <div class="card__description">
+        <div class="description">
+          <h3 class="description__title">Talvez você também se interesse por ...</h3>
+          <h2 class="description__title_book">Angular 11 e Firebase</h2>
+          <p class="description__text">Construindo uma aplicação integrada com a plataforma do Google.</p>
+        </div>
+        <img src="./assets/IconeAngular.png" class="description_image" alt="Angular">
+      </div>
+
+      <div class="card_buttons">
+        <ul class="buttons">
+          <li class="buttons__item">
+            <img src="./assets/Favoritos.svg" alt="Favoritar livro">
+          </li>
+          <li class="buttons__item">
+            <img src="./assets/Sacola.png" alt="Adicionar no carrinho de compras">
+          </li>
+        </ul>
+        <a href="#" class="button_archor">Saiba mais</a>
+      </div>
+    </div>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <script>
