--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet">
 </head>
 <body>
   <header class="cabecalho">
@@ -39,9 +41,39 @@
       </ul>
 
       <img src="assets/Logo.png" alt="Logo da alurabooks" class="container__imagem">
+      <h1 class="container__titulo"><b class="container__alura--negrito">Alura</b> Books</h1>
     </div>
+
+    <ul class="opcoes">
+      <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+      <label for="opcoes-menu">
+        <li class="opcoes__item">Categorias</li>
+      </label>
+      
+      <ul class="lista-menu">
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Programação</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Frontend</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Infraestrutura</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Business</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">Design & UX</a>
+        </li>
+      </ul>
+
+      <li class="opcoes__item"><a href="#" class="opcoes__item_link">Favoritos</a></li>
+      <li class="opcoes__item"><a href="#" class="opcoes__item_link">Minha estante</a></li>
+    </ul>
+
     <div class="container">
-      <a href="#"><img src="assets/Favoritos.svg" class="container__imagem" alt="Menu favoritos"></a>
+      <a href="#"><img src="assets/Favoritos.svg" class="container__imagem container__image-transaparente" alt="Menu favoritos"></a>
       <a href="#"><img src="assets/Sacola.png" class="container__imagem" alt="Sacola de compras"></a>
       <a href="#"><img src="assets/Usuario.png" class="container__imagem" alt="Perfil do usuário"></a>
     </div>
@@ -93,6 +125,88 @@
       </div>
     </div>
   </section>
+
+  <section class="carrossel">
+    <h2 class="carrossel__titulo">Mais vendidos</h2>
+    <div class="swiper">
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-pagination"></div>
+  
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="./assets/Tuning.png" alt="Tuning de SQL"></div>
+        <div class="swiper-slide"><img src="./assets/Javascript.png" alt="Java script assertivo"></div>
+        <div class="swiper-slide"><img src="./assets/Guia Front-end.png" alt="Guia front end"></div>
+        <div class="swiper-slide"><img src="./assets/ApacheKafka.png" alt="Apache kafka e spring boot"></div>
+      </div>
+      <div class="swiper-scrollbar"></div>
+  
+    </div>
+  
+    <div class="card">
+      <div class="card__description">
+        <div class="description">
+          <img src="assets/Estrelinhas.png" class="description_avaliation" alt="Avaliação 5 estrelas">
+          <h2 class="description__title_book">Juliana Agarikov</h2>
+          <p class="description__text">Analista de sistemas e escritora, Juliana é especialista em frontend.</p>
+        </div>
+        <img src="./assets/PerfilEscritora.png" class="description_image" alt="Angular">
+      </div>
+  
+      <div class="card_buttons">
+        <ul class="buttons">
+          <li class="buttons__item">
+            <img src="./assets/Favoritos.svg" alt="Favoritar livro">
+          </li>
+          <li class="buttons__item">
+            <img src="./assets/Sacola.png" alt="Adicionar no carrinho de compras">
+          </li>
+        </ul>
+        <a href="#" class="button_archor">Saiba mais</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="topics">
+    <h2 class="topics_title">Tópicos visitados recentemente</h2>
+    <ul class="topics_list">
+      <li class="topics_list_item">
+        <a href="#" class="topics_link">Android</a>
+      </li>
+      <li class="topics_list_item">
+        <a href="#" class="topics_link">Marketing Digital</a>
+      </li>
+      <li class="topics_list_item">
+        <a href="#" class="topics_link">Agile</a>
+      </li>
+      <li class="topics_list_item">
+        <a href="#" class="topics_link">Startups</a>
+      </li>
+      <li class="topics_list_item">
+        <a href="#" class="topics_link">HTML e CSS</a>
+      </li>
+      <li class="topics_list_item">
+        <a href="#" class="topics_link">Python</a>
+      </li>
+      <li class="topics_list_item">
+        <a href="#" class="topics_link">Java</a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="contact">
+    <div class="contact__description">
+      <h2 class="contact__title">Fique por dentro das novidades!</h2>
+      <p class="contact__text">Atualizações de e-books, novos livros, promoções e outros.</p>
+    </div>
+    <input class="contact__email" type="email" placeholder="Cadastre seu e-mail">
+  </section>
+
+  <hr>
+  <section class="footer">
+    <h2 class="footer_title">Grupo Alura</h2>
+  </section>
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <script>
