adjust footer layout for tablet config

--- a/index.html
+++ b/index.html
@@ -205,6 +205,93 @@
   <hr>
   <section class="footer">
     <h2 class="footer_title">Grupo Alura</h2>
+    <ul class="footer__list">
+      <li class="footer__list__titulo">Educação</li>
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/Caelum.svg" alt="Logo da caelum">
+        <a href="#" class="footer__list_item_link">Caelum</a>
+      </li>
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/CasaDoCodigo.svg" alt="Logo da casa do código">
+        <a href="#" class="footer__list_item_link">Casa do código</a>
+      </li>
+    </ul>
+
+    <ul class="footer__list">
+      <li class="footer__list__titulo">Educação online</li>
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/Alura.svg" alt="Logo da alura">
+        <a href="#" class="footer__list_item_link">Alura</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/AluraEmpresas.svg" alt="Logo da alura para empresas">
+        <a href="#" class="footer__list_item_link">Alura para empresas</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/AluraLATAM.svg" alt="Logo da alura latam">
+        <a href="#" class="footer__list_item_link">Alura Latam</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/AluraStart.svg" alt="Logo da alura start">
+        <a href="#" class="footer__list_item_link">Alura Start</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/MusicDot.svg" alt="Logo da musicdot">
+        <a href="#" class="footer__list_item_link">Musicdot</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/AluraLingua.svg" alt="Logo da alura lingua">
+        <a href="#" class="footer__list_item_link">Alura lingua</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/PM3.svg" alt="Logo da PM3">
+        <a href="#" class="footer__list_item_link">PM3</a>
+      </li>
+    </ul>
+
+    <ul class="footer__list">
+      <li class="footer__list__titulo">Comunidade</li>
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/HipstersTech.svg" alt="Logo da hipsters tech">
+        <a href="#" class="footer__list_item_link">Hipsters tech</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/ScubaDev.svg" alt="Logo da scubadev">
+        <a href="#" class="footer__list_item_link">Scubadev</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/LayersTech.svg" alt="Logo da layers ponto tech">
+        <a href="#" class="footer__list_item_link">Ponto tech</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/LikeABoss.svg" alt="Logo da like a boss">
+        <a href="#" class="footer__list_item_link">Like a boss</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/CarreiraSemFronteira.svg" alt="Logo da carreira sem fronteira">
+        <a href="#" class="footer__list_item_link">Carreira sem fronteiras</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/HipstersJobs.svg" alt="Logo da hipsters jobs">
+        <a href="#" class="footer__list_item_link">Hipsters jobs</a>
+      </li>
+
+      <li class="footer__list__item">
+        <img src="assets/alura_brands_icons/GUJ.svg" alt="Logo da GUJ">
+        <a href="#" class="footer__list_item_link">GUJ</a>
+      </li>
+    </ul>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
